--- a/styles.css
+++ b/styles.css
@@ -2,33 +2,39 @@
 body {
     background-image: url("Images/WashedOutBlackWP.jpeg");
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+}
+
+img {
+    width: 200px;
+    height: 100px;
 }
 
 .horizontalwhiteline {
     border-bottom: 2px solid white;
     height: 5px;
     width: 200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-p {
-    text-align: center;
-}
+.content {
+    max-width: max-content;
+    margin: auto;
+  }
 
 h1 {
     color: white; 
-    text-align: center;
     font-size: 40px;
 }
 
 h2 {
     color: yellow; 
-    text-align: center;
     font-size: 30px;
 }
 
 h3 {
     color: white; 
-    text-align: center;
     font-size: 25px;
 }
 
@@ -42,22 +48,51 @@ a {
     font-weight: bold;
 }
 
-table {
-    table-layout: fixed ;
-    width: 50% ;
+table, th, td {
+    table-layout: fixed;
+    width: 100%;
+    border: 2px solid black;
+    color: black;
+    background-color: yellow;
 }
 
-td {
-    text-align: center;
-}
-
-ul {
+#ul01 {
     display: table;
-    margin: 0 auto;
+    margin: auto;
+    align-items: center;
+    list-style-type: bullet;
+    color: white;
+    border: white;
+    border-style: groove;
+}
+
+#ul02 {
+    display: table;
+    margin: auto;
+    align-items: center;
+    list-style-type: square;
+    color: white;
+    border: white;
+    border-style: ridge;
 }
 
 ol {
     color: white;
     display: table;
-    margin: 0 auto;
+    margin: auto;
+}
+
+.formborder {
+    border-radius: 5px;
+}
+
+input[type=submit] {
+    padding: 5px 15px; 
+    background:yellow;
+    color: black; 
+    font-weight: bold;
+    border:0 none;
+    cursor: pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
 }
